CLA/Parser.output
Terminals unused in grammar

    ERROR
    FLAG
    VAR
    QUOTE
    PLUSMINUS


State 12 conflicts: 4 shift/reduce
State 13 conflicts: 5 shift/reduce
State 15 conflicts: 2 shift/reduce
State 28 conflicts: 5 shift/reduce
State 64 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 176 conflicts: 1 shift/reduce
State 177 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: info objects
    2      | info table objects
    3      | table objects
    4      | objects
    5      | info

    6 info: INFO info_list

    7 info_list: ID info_list
    8          | DESC info_list
    9          | REAL info_list
   10          | ID
   11          | DESC
   12          | REAL

   13 objects: object_block
   14        | object_block objects
   15        | definitions
   16        | definitions objects

   17 definitions: definition
   18            | definition definitions
   19            | regions

   20 regions: region_block
   21        | region_block regions

   22 definition: DEFINE id ASSIGN condition
   23           | DEFINE id COLON condition
   24           | table

   25 table: TABLE ID TABLETYPE ID NVARS INT ERRORS boolean tablelist

   26 tablelist: value tablelist
   27          | value

   28 value: REAL

   29 function: id LPAR param_list RPAR
   30         | LCBRACE param_list RCBRACE id
   31         | PIPE int PIPE
   32         | PIPE real PIPE
   33         | PIPE id PIPE

   34 param_list: chain COMMA param_list
   35           | chain

   36 object_block: OBJECT id takes
   37             | OBJECT id takes criteria

   38 takes: take takes
   39      | take

   40 take: TAKE take_id
   41     | COLON take_id
   42     | TAKE UNION LPAR id COMMA id RPAR
   43     | COLON UNION LPAR id COMMA id RPAR

   44 take_id: id
   45        | id LPAR id_list RPAR
   46        | id id_list

   47 id_list: id_list_params
   48        | id_list_params COMMA id_list

   49 id_list_params: id
   50               | num

   51 region_block: REGION id criteria
   52             | HISTOLIST id criteria

   53 criteria: criterion criteria
   54         | criterion

   55 criterion: COMMAND chained_cond
   56          | HISTO id COMMA DESC comma_sep
   57          | id

   58 comma_sep: COMMA comma_sep
   59          | num comma_sep
   60          | id comma_sep
   61          | function comma_sep
   62          | LBRACKET bins RBRACKET comma_sep
   63          | num
   64          | id
   65          | LBRACKET bins RBRACKET
   66          | function

   67 bins: bins num
   68     | num

   69 chained_cond: LPAR chain RPAR
   70             | LPAR chain RPAR logic_op chained_cond
   71             | chain
   72             | chain QUES chain COLON chain
   73             | chain QUES chain
   74             | id range

   75 chain: condition
   76      | condition logic_op chain
   77      | not condition

   78 not: NOT

   79 condition: expr
   80          | expr compare_op condition
   81          | expr INCLUSIVE num num
   82          | expr EXCLUSIVE num num

   83 compare_op: GT
   84           | LT
   85           | GE
   86           | LE
   87           | EQ
   88           | NE

   89 logic_op: AND
   90         | OR

   91 expr: factor
   92     | factor expr_op expr

   93 expr_op: PLUS
   94        | SUBTRACT

   95 factor: term
   96       | term factor_op factor

   97 factor_op: MULTIPLY
   98          | DIVIDE
   99          | POW

  100 term: id_qualifiers
  101     | function
  102     | function dot_op
  103     | num
  104     | LPAR expr RPAR

  105 id_qualifiers: id_qualifier id_qualifiers
  106              | id_qualifier

  107 id_qualifier: dot_op
  108             | id
  109             | id LBRACKET index RBRACKET
  110             | id UNDERSCORE index COLON index
  111             | id UNDERSCORE index
  112             | id LBRACKET index COLON index RBRACKET

  113 dot_op: DOT id

  114 range: range num
  115      | num

  116 boolean: TRUE
  117        | FALSE

  118 num: int
  119    | real

  120 index: SUBTRACT INT
  121      | INT
  122      | ε

  123 int: INT

  124 real: REAL

  125 id: ID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DEFINE <std::string> (258) 22 23
    REGION <std::string> (259) 51
    OBJECT <std::string> (260) 36 37
    TAKE <std::string> (261) 40 42
    COMMAND <std::string> (262) 55
    HISTO <std::string> (263) 56
    HISTOLIST <std::string> (264) 52
    TABLE <std::string> (265) 25
    TABLETYPE <std::string> (266) 25
    NVARS <std::string> (267) 25
    ERRORS <std::string> (268) 25
    UNION <std::string> (269) 42 43
    ID <std::string> (270) 7 10 25 125
    ERROR <std::string> (271)
    FLAG <std::string> (272)
    LPAR <std::string> (273) 29 42 43 45 69 70 104
    RPAR <std::string> (274) 29 42 43 45 69 70 104
    VAR <std::string> (275)
    QUOTE <std::string> (276)
    DESC <std::string> (277) 8 11 56
    INFO <std::string> (278) 6
    PLUS <std::string> (279) 93
    SUBTRACT <std::string> (280) 94 120
    MULTIPLY <std::string> (281) 97
    DIVIDE <std::string> (282) 98
    POW <std::string> (283) 99
    ASSIGN <std::string> (284) 22
    PLUSMINUS <std::string> (285)
    GT <std::string> (286) 83
    LT <std::string> (287) 84
    GE <std::string> (288) 85
    LE <std::string> (289) 86
    EQ <std::string> (290) 87
    NE <std::string> (291) 88
    TRUE <std::string> (292) 116
    FALSE <std::string> (293) 117
    AND <std::string> (294) 89
    OR <std::string> (295) 90
    NOT <std::string> (296) 78
    PIPE <std::string> (297) 31 32 33
    LBRACKET <std::string> (298) 62 65 109 112
    RBRACKET <std::string> (299) 62 65 109 112
    LCBRACE <std::string> (300) 30
    RCBRACE <std::string> (301) 30
    COLON <std::string> (302) 23 41 43 72 110 112
    QUES <std::string> (303) 72 73
    COMMA <std::string> (304) 34 42 43 48 56 58
    DOT <std::string> (305) 113
    INCLUSIVE <std::string> (306) 81
    EXCLUSIVE <std::string> (307) 82
    UNDERSCORE <std::string> (308) 110 111
    INT <int> (309) 25 120 121 123
    REAL <double> (310) 9 12 28 124


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    start (57)
        on left: 1 2 3 4 5
        on right: 0
    info <std::string> (58)
        on left: 6
        on right: 1 2 5
    info_list (59)
        on left: 7 8 9 10 11 12
        on right: 6 7 8 9
    objects (60)
        on left: 13 14 15 16
        on right: 1 2 3 4 14 16
    definitions (61)
        on left: 17 18 19
        on right: 15 16 18
    regions (62)
        on left: 20 21
        on right: 19 21
    definition <adl::Expr*> (63)
        on left: 22 23 24
        on right: 17 18
    table <adl::Expr*> (64)
        on left: 25
        on right: 2 3 24
    tablelist <double> (65)
        on left: 26 27
        on right: 25 26
    value <double> (66)
        on left: 28
        on right: 26 27
    function <adl::Expr*> (67)
        on left: 29 30 31 32 33
        on right: 61 66 101 102
    param_list <adl::Expr*> (68)
        on left: 34 35
        on right: 29 30 34
    object_block <adl::Expr*> (69)
        on left: 36 37
        on right: 13 14
    takes (70)
        on left: 38 39
        on right: 36 37 38
    take <adl::Expr*> (71)
        on left: 40 41 42 43
        on right: 38 39
    take_id <adl::Expr*> (72)
        on left: 44 45 46
        on right: 40 41
    id_list <adl::Expr*> (73)
        on left: 47 48
        on right: 45 46 48
    id_list_params <adl::Expr*> (74)
        on left: 49 50
        on right: 47 48
    region_block <adl::Expr*> (75)
        on left: 51 52
        on right: 20 21
    criteria (76)
        on left: 53 54
        on right: 37 51 52 53
    criterion <adl::Expr*> (77)
        on left: 55 56 57
        on right: 53 54
    comma_sep (78)
        on left: 58 59 60 61 62 63 64 65 66
        on right: 56 58 59 60 61 62
    bins <std::vector<double>> (79)
        on left: 67 68
        on right: 62 65 67
    chained_cond <adl::Expr*> (80)
        on left: 69 70 71 72 73 74
        on right: 55 70
    chain <adl::Expr*> (81)
        on left: 75 76 77
        on right: 34 35 69 70 71 72 73 76
    not <adl::Expr*> (82)
        on left: 78
        on right: 77
    condition <adl::Expr*> (83)
        on left: 79 80 81 82
        on right: 22 23 75 76 77 80
    compare_op <std::string> (84)
        on left: 83 84 85 86 87 88
        on right: 80
    logic_op <std::string> (85)
        on left: 89 90
        on right: 70 76
    expr <adl::Expr*> (86)
        on left: 91 92
        on right: 79 80 81 82 92 104
    expr_op <std::string> (87)
        on left: 93 94
        on right: 92
    factor <adl::Expr*> (88)
        on left: 95 96
        on right: 91 92 96
    factor_op <std::string> (89)
        on left: 97 98 99
        on right: 96
    term <adl::Expr*> (90)
        on left: 100 101 102 103 104
        on right: 95 96
    id_qualifiers <adl::Expr*> (91)
        on left: 105 106
        on right: 100 105
    id_qualifier <adl::Expr*> (92)
        on left: 107 108 109 110 111 112
        on right: 105 106
    dot_op <adl::Expr*> (93)
        on left: 113
        on right: 102 107
    range <adl::Expr*> (94)
        on left: 114 115
        on right: 74 114
    boolean <bool> (95)
        on left: 116 117
        on right: 25
    num <adl::Expr*> (96)
        on left: 118 119
        on right: 50 59 63 67 68 81 82 103 114 115
    index <int> (97)
        on left: 120 121 122
        on right: 109 110 111 112
    int <adl::Expr*> (98)
        on left: 123
        on right: 31 118
    real <adl::Expr*> (99)
        on left: 124
        on right: 32 119
    id <adl::Expr*> (100)
        on left: 125
        on right: 22 23 29 30 33 36 37 42 43 44 45 46 49 51 52 56 57 60 64 74 108 109 110 111 112 113


State 0

    0 $accept: • start $end

    DEFINE     shift, and go to state 1
    REGION     shift, and go to state 2
    OBJECT     shift, and go to state 3
    HISTOLIST  shift, and go to state 4
    TABLE      shift, and go to state 5
    INFO       shift, and go to state 6

    start         go to state 7
    info          go to state 8
    objects       go to state 9
    definitions   go to state 10
    regions       go to state 11
    definition    go to state 12
    table         go to state 13
    object_block  go to state 14
    region_block  go to state 15


State 1

   22 definition: DEFINE • id ASSIGN condition
   23           | DEFINE • id COLON condition

    ID  shift, and go to state 16

    id  go to state 17


State 2

   51 region_block: REGION • id criteria

    ID  shift, and go to state 16

    id  go to state 18


State 3

   36 object_block: OBJECT • id takes
   37             | OBJECT • id takes criteria

    ID  shift, and go to state 16

    id  go to state 19


State 4

   52 region_block: HISTOLIST • id criteria

    ID  shift, and go to state 16

    id  go to state 20


State 5

   25 table: TABLE • ID TABLETYPE ID NVARS INT ERRORS boolean tablelist

    ID  shift, and go to state 21


State 6

    6 info: INFO • info_list

    ID    shift, and go to state 22
    DESC  shift, and go to state 23
    REAL  shift, and go to state 24

    info_list  go to state 25


State 7

    0 $accept: start • $end

    $end  shift, and go to state 26


State 8

    1 start: info • objects
    2      | info • table objects
    5      | info •

    DEFINE     shift, and go to state 1
    REGION     shift, and go to state 2
    OBJECT     shift, and go to state 3
    HISTOLIST  shift, and go to state 4
    TABLE      shift, and go to state 5

    $default  reduce using rule 5 (start)

    objects       go to state 27
    definitions   go to state 10
    regions       go to state 11
    definition    go to state 12
    table         go to state 28
    object_block  go to state 14
    region_block  go to state 15


State 9

    4 start: objects •

    $default  reduce using rule 4 (start)


State 10

   15 objects: definitions •
   16        | definitions • objects

    DEFINE     shift, and go to state 1
    REGION     shift, and go to state 2
    OBJECT     shift, and go to state 3
    HISTOLIST  shift, and go to state 4
    TABLE      shift, and go to state 5

    $default  reduce using rule 15 (objects)

    objects       go to state 29
    definitions   go to state 10
    regions       go to state 11
    definition    go to state 12
    table         go to state 30
    object_block  go to state 14
    region_block  go to state 15


State 11

   19 definitions: regions •

    $default  reduce using rule 19 (definitions)


State 12

   17 definitions: definition •
   18            | definition • definitions

    DEFINE     shift, and go to state 1
    REGION     shift, and go to state 2
    HISTOLIST  shift, and go to state 4
    TABLE      shift, and go to state 5

    DEFINE     [reduce using rule 17 (definitions)]
    REGION     [reduce using rule 17 (definitions)]
    HISTOLIST  [reduce using rule 17 (definitions)]
    TABLE      [reduce using rule 17 (definitions)]
    $default   reduce using rule 17 (definitions)

    definitions   go to state 31
    regions       go to state 11
    definition    go to state 12
    table         go to state 30
    region_block  go to state 15


State 13

    3 start: table • objects
   24 definition: table •

    DEFINE     shift, and go to state 1
    REGION     shift, and go to state 2
    OBJECT     shift, and go to state 3
    HISTOLIST  shift, and go to state 4
    TABLE      shift, and go to state 5

    DEFINE     [reduce using rule 24 (definition)]
    REGION     [reduce using rule 24 (definition)]
    OBJECT     [reduce using rule 24 (definition)]
    HISTOLIST  [reduce using rule 24 (definition)]
    TABLE      [reduce using rule 24 (definition)]
    $default   reduce using rule 24 (definition)

    objects       go to state 32
    definitions   go to state 10
    regions       go to state 11
    definition    go to state 12
    table         go to state 30
    object_block  go to state 14
    region_block  go to state 15


State 14

   13 objects: object_block •
   14        | object_block • objects

    DEFINE     shift, and go to state 1
    REGION     shift, and go to state 2
    OBJECT     shift, and go to state 3
    HISTOLIST  shift, and go to state 4
    TABLE      shift, and go to state 5

    $default  reduce using rule 13 (objects)

    objects       go to state 33
    definitions   go to state 10
    regions       go to state 11
    definition    go to state 12
    table         go to state 30
    object_block  go to state 14
    region_block  go to state 15


State 15

   20 regions: region_block •
   21        | region_block • regions

    REGION     shift, and go to state 2
    HISTOLIST  shift, and go to state 4

    REGION     [reduce using rule 20 (regions)]
    HISTOLIST  [reduce using rule 20 (regions)]
    $default   reduce using rule 20 (regions)

    regions       go to state 34
    region_block  go to state 15


State 16

  125 id: ID •

    $default  reduce using rule 125 (id)


State 17

   22 definition: DEFINE id • ASSIGN condition
   23           | DEFINE id • COLON condition

    ASSIGN  shift, and go to state 35
    COLON   shift, and go to state 36


State 18

   51 region_block: REGION id • criteria

    COMMAND  shift, and go to state 37
    HISTO    shift, and go to state 38
    ID       shift, and go to state 16

    criteria   go to state 39
    criterion  go to state 40
    id         go to state 41


State 19

   36 object_block: OBJECT id • takes
   37             | OBJECT id • takes criteria

    TAKE   shift, and go to state 42
    COLON  shift, and go to state 43

    takes  go to state 44
    take   go to state 45


State 20

   52 region_block: HISTOLIST id • criteria

    COMMAND  shift, and go to state 37
    HISTO    shift, and go to state 38
    ID       shift, and go to state 16

    criteria   go to state 46
    criterion  go to state 40
    id         go to state 41


State 21

   25 table: TABLE ID • TABLETYPE ID NVARS INT ERRORS boolean tablelist

    TABLETYPE  shift, and go to state 47


State 22

    7 info_list: ID • info_list
   10          | ID •

    ID    shift, and go to state 22
    DESC  shift, and go to state 23
    REAL  shift, and go to state 24

    $default  reduce using rule 10 (info_list)

    info_list  go to state 48


State 23

    8 info_list: DESC • info_list
   11          | DESC •

    ID    shift, and go to state 22
    DESC  shift, and go to state 23
    REAL  shift, and go to state 24

    $default  reduce using rule 11 (info_list)

    info_list  go to state 49


State 24

    9 info_list: REAL • info_list
   12          | REAL •

    ID    shift, and go to state 22
    DESC  shift, and go to state 23
    REAL  shift, and go to state 24

    $default  reduce using rule 12 (info_list)

    info_list  go to state 50


State 25

    6 info: INFO info_list •

    $default  reduce using rule 6 (info)


State 26

    0 $accept: start $end •

    $default  accept


State 27

    1 start: info objects •

    $default  reduce using rule 1 (start)


State 28

    2 start: info table • objects
   24 definition: table •

    DEFINE     shift, and go to state 1
    REGION     shift, and go to state 2
    OBJECT     shift, and go to state 3
    HISTOLIST  shift, and go to state 4
    TABLE      shift, and go to state 5

    DEFINE     [reduce using rule 24 (definition)]
    REGION     [reduce using rule 24 (definition)]
    OBJECT     [reduce using rule 24 (definition)]
    HISTOLIST  [reduce using rule 24 (definition)]
    TABLE      [reduce using rule 24 (definition)]
    $default   reduce using rule 24 (definition)

    objects       go to state 51
    definitions   go to state 10
    regions       go to state 11
    definition    go to state 12
    table         go to state 30
    object_block  go to state 14
    region_block  go to state 15


State 29

   16 objects: definitions objects •

    $default  reduce using rule 16 (objects)


State 30

   24 definition: table •

    $default  reduce using rule 24 (definition)


State 31

   18 definitions: definition definitions •

    $default  reduce using rule 18 (definitions)


State 32

    3 start: table objects •

    $default  reduce using rule 3 (start)


State 33

   14 objects: object_block objects •

    $default  reduce using rule 14 (objects)


State 34

   21 regions: region_block regions •

    $default  reduce using rule 21 (regions)


State 35

   22 definition: DEFINE id ASSIGN • condition

    ID       shift, and go to state 16
    LPAR     shift, and go to state 52
    PIPE     shift, and go to state 53
    LCBRACE  shift, and go to state 54
    DOT      shift, and go to state 55
    INT      shift, and go to state 56
    REAL     shift, and go to state 57

    function       go to state 58
    condition      go to state 59
    expr           go to state 60
    factor         go to state 61
    term           go to state 62
    id_qualifiers  go to state 63
    id_qualifier   go to state 64
    dot_op         go to state 65
    num            go to state 66
    int            go to state 67
    real           go to state 68
    id             go to state 69


State 36

   23 definition: DEFINE id COLON • condition

    ID       shift, and go to state 16
    LPAR     shift, and go to state 52
    PIPE     shift, and go to state 53
    LCBRACE  shift, and go to state 54
    DOT      shift, and go to state 55
    INT      shift, and go to state 56
    REAL     shift, and go to state 57

    function       go to state 58
    condition      go to state 70
    expr           go to state 60
    factor         go to state 61
    term           go to state 62
    id_qualifiers  go to state 63
    id_qualifier   go to state 64
    dot_op         go to state 65
    num            go to state 66
    int            go to state 67
    real           go to state 68
    id             go to state 69


State 37

   55 criterion: COMMAND • chained_cond

    ID       shift, and go to state 16
    LPAR     shift, and go to state 71
    NOT      shift, and go to state 72
    PIPE     shift, and go to state 53
    LCBRACE  shift, and go to state 54
    DOT      shift, and go to state 55
    INT      shift, and go to state 56
    REAL     shift, and go to state 57
